# libddssec

./: .clang-format  .gitignore  CMakeLists.txt  changelog.md  contributing.md  license.md  maintainers.md  readme.md
cmake/modules/: FindOPTEECLIENT.cmake  builtin_function.cmake  util_function.cmake
doc/: CMakeLists.txt  about_libddssec.md  code_style.md  coding.md  doxyfile.in  how_to_get_fvp_binaries.md  secure_coding_guidelines.md  trusted_application.md  using_libddssec.md
doc/media/: footer.html
include/libddssec/: dsec_aes.h  dsec_ca.h  dsec_errno.h  dsec_hh.h  dsec_hh_challenge.h  dsec_hh_dh.h  dsec_ih.h  dsec_ih_ca.h  dsec_ih_cert.h  dsec_ih_privkey.h  dsec_key_material.h  dsec_print.h  dsec_rand.h  dsec_session_key.h  dsec_ssh.h  dsec_util.h  dsec_version.h.in
src/: dsec_aes.c  dsec_ca.c  dsec_ca.h  dsec_hh.c  dsec_hh_challenge.c  dsec_hh_dh.c  dsec_ih.c  dsec_ih_ca.c  dsec_ih_cert.c  dsec_ih_privkey.c  dsec_key_material.c  dsec_rand.c  dsec_session_key.c  dsec_ssh.c
tests/: CMakeLists.txt  dsec_digest_ca.c  dsec_digest_ca.h  dsec_test.c  dsec_test.h  dsec_test_canary.c  dsec_test_canary.h  dsec_test_ta.c  dsec_test_ta.h  test_aes.c  test_ca_common_functions.c  test_canary.c  test_digest.c  test_hh.c  test_hh_challenge.c  test_hh_dh.c  test_hmac.c  test_ih.c  test_ih_ca.c  test_ih_cert.c  test_ih_privkey.c  test_key_material.c  test_manage_object.c  test_manage_object_ca.c  test_manage_object_ca.h  test_rand.c  test_session_key.c  test_ssh.c  test_version.c
tests/assets/: cacert.pem  invalid_cacert_mismatch1.pem  invalid_cacert_missing_byte.pem  invalid_nosignature_cert.pem  invalid_p1_cert_shortterm_signed.pem  invalid_shortterm_ca.pem  invalid_signature_cert.pem  p1cert.pem
tests/builtins/: CMakeLists.txt
tools/: check_EOF.py  check_copyright.py  check_coverity.py  check_style.py  check_style_cmake.py  check_tabs.py  embed_assets.py  misra.config  testbench.py  toolchain.cmake  utils.py  validate.py  walk.py
tools/fvp_get_binaries_scripts/: .dockerignore  Dockerfile  Dockerfile_binaries  build_binaries.sh  build_ubuntu_image.sh
trusted_application/: CMakeLists.txt
trusted_application/builtins/: CMakeLists.txt
trusted_application/include/: dsec_ta.h
trusted_application/src/: Makefile  dsec_macros.h  dsec_ta.c  dsec_ta_aes.c  dsec_ta_aes.h  dsec_ta_challenge.c  dsec_ta_challenge.h  dsec_ta_dh.c  dsec_ta_dh.h  dsec_ta_dh_data.h  dsec_ta_digest.c  dsec_ta_digest.h  dsec_ta_hh.c  dsec_ta_hh.h  dsec_ta_hmac.c  dsec_ta_hmac.h  dsec_ta_ih.c  dsec_ta_ih.h  dsec_ta_ih_ca.c  dsec_ta_ih_ca.h  dsec_ta_ih_cert.c  dsec_ta_ih_cert.h  dsec_ta_ih_privkey.c  dsec_ta_ih_privkey.h  dsec_ta_key_material.c  dsec_ta_key_material.h  dsec_ta_manage_object.c  dsec_ta_manage_object.h  dsec_ta_session_key.c  dsec_ta_session_key.h  dsec_ta_ssh.c  dsec_ta_ssh.h  sub.mk  user_ta_header_defines.h
